[package]
name = "samd-i2s"
version = "0.1.0"
authors = ["Ian Rees <ian.rees@gmail.com>"]
edition = "2018"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "samd", "atsamd", "samd21"]

[dependencies]
cortex-m = "~0.6"

[dependencies.atsamd-hal]
# Under-development version with DMA support
default-features = false
path = "../atsamd/hal"

[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
# Must be the same revision as probe-run's defmt-decoder and defmt-elf2table
rev = "1bb6478544a7188b2e7f3ac21939f58f50d56b9f"

[dependencies.defmt-rtt]
git = "https://github.com/knurling-rs/defmt"
# Must be the same revision as probe-run's defmt-decoder and defmt-elf2table
rev = "1bb6478544a7188b2e7f3ac21939f58f50d56b9f"

[features]
samd21 = []
samd21g18a = ["samd21", "atsamd-hal/samd21g", "defmt-default"]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []