[package]
name = "samd-i2s"
version = "0.1.0"
authors = ["Ian Rees <ian.rees@gmail.com>"]
edition = "2018"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "samd", "atsamd", "samd21"]

[dependencies]
cortex-m = "~0.6"

[dependencies.atsamd-hal]
# Under-development version with DMA support
default-features = false
git = "https://github.com/ianrrees/atsamd"
branch = "add-dma"

[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
# Must be the same revision as probe-run's defmt-decoder and defmt-elf2table
rev = "c4461eb148461e54d9a1e203cf01393f07ce84f0"

[dependencies.defmt-rtt]
git = "https://github.com/knurling-rs/defmt"
# Must be the same revision as probe-run's defmt-decoder and defmt-elf2table
rev = "c4461eb148461e54d9a1e203cf01393f07ce84f0"

[features]
samd21 = []
samd21g18a = ["samd21", "atsamd-hal/samd21g", "defmt-default"]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []