[package]
name = "samd-i2s"
version = "0.1.0"
authors = ["Ian Rees <ian.rees@gmail.com>"]
edition = "2018"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "samd", "atsamd", "samd21"]

[dependencies]
cortex-m = "~0.6"
defmt = "0.2.0"
defmt-rtt = "0.2.0"

[dependencies.atsamd-hal]
# Under-development version with DMA support
default-features = false
# git = "https://github.com/ianrrees/atsamd"
# branch = "add-dma"
path = '/home/irees/Projects/20201112 - atsamd-rs/atsamd-rs/hal'

[features]
samd21 = []
samd21g18a = ["samd21", "atsamd-hal/samd21g", "defmt-default"]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []